k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: mkjs
spec:
  selector:
    app: mkjs-app
  ports:
    - port: 55555
      targetPort: 55555
