k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: mkjs
spec:
  selector:
    app: mkjs-nginx
  ports:
    - port: 80
      targetPort: 80
